RESOLVED FIXED234321
[GPU Process] Can't getImageData on canvas larger than 4096x4096
https://bugs.webkit.org/show_bug.cgi?id=234321
Summary [GPU Process] Can't getImageData on canvas larger than 4096x4096
Myles C. Maxfield
Reported 2021-12-14 15:44:23 PST
[GPU Process] Can't getImageData on canvas larger than 4096x4096
Attachments
Patch (3.92 KB, patch)
2021-12-14 15:45 PST, Myles C. Maxfield
no flags
Patch (6.25 KB, patch)
2021-12-16 18:39 PST, Myles C. Maxfield
thorton: review+
Patch for committing (7.73 KB, patch)
2022-01-07 17:45 PST, Myles C. Maxfield
no flags
Patch for committing (7.73 KB, patch)
2022-01-07 17:46 PST, Myles C. Maxfield
no flags
Myles C. Maxfield
Comment 1 2021-12-14 15:45:26 PST
Myles C. Maxfield
Comment 2 2021-12-14 15:45:30 PST
Myles C. Maxfield
Comment 3 2021-12-15 16:47:41 PST
Looks like iOS needs a different policy than macOS.
Myles C. Maxfield
Comment 4 2021-12-16 18:04:03 PST
static inline size_t maxCanvasArea() { if (maxCanvasAreaForTesting) return *maxCanvasAreaForTesting; // Firefox limits width/height to 32767 pixels, but slows down dramatically before it // reaches that limit. We limit by area instead, giving us larger maximum dimensions, // in exchange for a smaller maximum canvas size. The maximum canvas size is in device pixels. #if PLATFORM(IOS_FAMILY) return 4096 * 4096; #else return 16384 * 16384; #endif }
Myles C. Maxfield
Comment 5 2021-12-16 18:39:19 PST
Tim Horton
Comment 6 2021-12-16 18:47:29 PST
Comment on attachment 447408 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=447408&action=review > Source/WebCore/ChangeLog:9 > + We already have a policy about how big canvases can be. Simply export tat policy “tat”
Myles C. Maxfield
Comment 7 2021-12-17 01:18:48 PST
Looks like window.internals.setMaxCanvasPixelMemory() doesn’t make it to the GPU Process 🤔
Myles C. Maxfield
Comment 8 2022-01-07 17:45:06 PST
Created attachment 448651 [details] Patch for committing
Myles C. Maxfield
Comment 9 2022-01-07 17:46:14 PST
Created attachment 448652 [details] Patch for committing
Myles C. Maxfield
Comment 10 2022-01-07 19:19:13 PST
Note You need to log in before you can comment on or make changes to this bug.