[GPU Process] Can't getImageData on canvas larger than 4096x4096 https://bugs.webkit.org/show_bug.cgi?id=234321 <rdar://problem/83575501>

Reviewed by Tim Horton.

Source/WebCore:

We already have a policy about how big canvases can be. Simply export that policy
so it can be consulted from the GPU process.

Test: fast/canvas/large-getImageData.html

* html/HTMLCanvasElement.cpp:
(WebCore::HTMLCanvasElement::maxActivePixelMemory):
(WebCore::maxActivePixelMemory): Deleted.
* html/HTMLCanvasElement.h:

Source/WebKit:

Consult the policy for how big a canvas can be, rather than hardcoding a number.

* GPUProcess/graphics/RemoteRenderingBackend.cpp:
(WebKit::RemoteRenderingBackend::updateSharedMemoryForGetPixelBufferHelper):

LayoutTests:

* fast/canvas/large-getImageData-expected.txt: Added.
* fast/canvas/large-getImageData.html: Added.


Canonical link: https://commits.webkit.org/245857@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287805 268f45cc-cd09-0410-ab3c-d52691b4dbfc